app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 252 100% 69%;
    --primary-foreground: 0 0% 100%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84% 60%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 252 100% 69%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 225 9% 9%;
    --foreground: 210 40% 98%;

    --card: 228 9% 11%;
    --card-foreground: 210 40% 98%;

    --popover: 228 9% 11%;
    --popover-foreground: 210 40% 98%;

    --primary: 252 100% 69%;
    --primary-foreground: 0 0% 100%;

    --secondary: 228 6% 16%;
    --secondary-foreground: 210 40% 98%;

    --muted: 228 6% 16%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 228 6% 16%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 84% 60%;
    --destructive-foreground: 210 40% 98%;

    --border: 228 6% 16%;
    --input: 228 6% 16%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border antialiased;
  }

  html,
  body {
    @apply h-full;
  }

  body {
    @apply bg-background text-foreground;
  }
}

